--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ mod_id=legacyskyblock
 mod_version=1.0.0
 mod_description=1.21 Hypixel Skyblock mod aimed to port features from 1.8.9 mods
 
-minecraft_version=1.21.8
-yarn_mappings_version=1.21.8+build.1
+minecraft_version=1.21.5
+yarn_mappings_version=1.21.5+build.1
 fabric_loader_version=0.17.2
-fabric_api_version=0.132.0+1.21.8
+fabric_api_version=0.128.2+1.21.5
 fabric_loom_version=1.11-SNAPSHOT
 
-yacl_version=3.7.1+1.21.6
-mod_menu_version=15.0.0-beta.3
+yacl_version=3.7.1+1.21.5
+mod_menu_version=14.0.0-rc.2
 hypixel_mod_api_version=1.0.1
 
 org.gradle.jvmargs=-Xmx1G
