--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ mod_version=1.0.0
 mod_description=1.21 Hypixel Skyblock mod aimed to port features from 1.8.9 mods
 
 minecraft_version=1.21.5
+minecraft_max_version=1.21.8
 yarn_mappings_version=1.21.5+build.1
 fabric_loader_version=0.17.2
 fabric_api_version=0.128.2+1.21.5
