--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,12 @@
-mod_name=LegacySkyblock
-mod_id=legacyskyblock
-mod_version=1.1.4
-mod_description=1.21 Hypixel Skyblock mod aimed to port features from 1.8.9 mods
-
-minecraft_version=1.21.5
-minecraft_max_version=1.21.8
-yarn_mappings_version=1.21.5+build.1
-fabric_loader_version=0.17.2
-fabric_api_version=0.128.2+1.21.5
-fabric_loom_version=1.11-SNAPSHOT
-
-yacl_version=3.7.1+1.21.5
-mod_menu_version=14.0.0-rc.2
-hypixel_mod_api_version=1.0.1
-
-org.gradle.jvmargs=-Xmx1G
+org.gradle.daemon=true
 org.gradle.parallel=true
+org.gradle.configureoncommand=true
+org.gradle.parallel.threads=4
+org.gradle.jvmargs=-Xmx2G
+loom.ignoreDependencyLoomVersionValidation=true
+
+mod.name=LegacySkyblock
+mod.id=legacyskyblock
+mod.version=1.1.4
+mod.description=1.21 Hypixel Skyblock mod aimed to port features from 1.8.9 mods
+mod.group=tomeko.legacyskyblock
