--- a/gradle.properties
+++ b/gradle.properties
@@ -8,5 +8,5 @@ loom.ignoreDependencyLoomVersionValidation=true
 mod.name=LegacySkyblock
 mod.id=legacyskyblock
 mod.version=1.4.3
-mod.description=1.21 Hypixel Skyblock mod aimed to port features from 1.8.9 mods
+mod.description=Modern Hypixel Skyblock mod aimed to port features from 1.8.9 mods
 mod.group=tomeko.legacyskyblock
