move from deftu gradle toolkit to stonecutter

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,21 @@ org.gradle.parallel=true
 org.gradle.configureoncommand=true
 org.gradle.parallel.threads=4
 org.gradle.jvmargs=-Xmx2G
-loom.ignoreDependencyLoomVersionValidation=true
+org.gradle.configuration-cache=true
 
-mod.name=LegacySkyblock
-mod.id=legacyskyblock
-mod.version=1.4.3
-mod.description=Modern Hypixel Skyblock mod aimed to port features from 1.8.9 mods
-mod.group=tomeko.legacyskyblock
+mod_name=LegacySkyblock
+mod_id=legacyskyblock
+mod_version=1.4.4
+mod_description=Modern Hypixel Skyblock mod aimed to port features from 1.8.9 mods
+mod_group=tomeko.legacyskyblock
+
+minecraft_version=[VERSIONED]
+yarn_mappings_version=[VERSIONED]
+fabric_loader_version=0.18.4
+fabric_api_version=[VERSIONED]
+
+hypixel_mod_api_version=1.0.1
+yacl_version=[VERSIONED]
+mod_menu_version=[VERSIONED]
+
+java_objective_c_bridge_version=1.2
